# Trireme

./: .gitignore  .nfs000000030eeddf79000082ef  README.md  bootstrap_AS_passes.sh  install.sh  push_changes.sh  run_trireme_analysis.sh
AccelSeeker/: AccelSeeker.cpp  AccelSeeker.h
audioDecoding/: :q  compute_merit.sh  compute_sw_hw.sh  extract_llp.sh  extract_tlp.sh  generate_accelcands_list.sh  main.hpvm.ll  run_analysis_extract_parallelism.sh  run_config.sh  run_sys_aw.sh  run_sys_aw.sh.new  run_trireme_analysis.sh  update_fci.sh  update_io.sh
audioDecoding/configs_data/: FCI.txt  FCI_HPVM_LLP.txt  INV_IO_OVHD.txt  IO.txt.static  IO_HPVM_LLP.txt  LA_HPVM_LLP.txt.orig  SW_HW.txt  SW_HW_AREA.txt.orig  build_tlp-llp_parallel_tasks.sh  cols.txt  compute_merit.sh  compute_merit_llp.sh  earliest_start.txt  earliest_start_tlp-llp.txt  extract_pipe-llp.sh  extract_pipe.sh  extract_tlp-llp.sh  filter_mci.sh  generate_accelcands_list.sh  parallel_loops.txt  parallel_tasks.llp.txt  parallel_tasks_filtered.txt  parallel_tasks_tlp-llp.txt  pipelined_tasks-llp.txt  pipelined_tasks.txt  pipelined_tasks.txt.old  run_config.new.sh  run_config.sh
audioDecoding/gold_data/: FCI.txt  IO.txt
hpvm-trireme/tools/hpvm-trireme/: CMakeLists.txt  hpvm-trireme.cpp  hpvm-trireme.h
hpvm_patches/: patch_hpvm.sh
scripts/: IO.txt  LA.txt  build_pipe-llp_parallel_tasks.sh  build_tlp-llp_parallel_tasks.sh  compute_sw_hw_tasks.sh  extract_llp.sh  extract_tlp.sh  filter_la_file.sh  generate_accelcands_list.sh  remove_fractional_point.sh  update_fci.sh  update_io.sh
(+511 files in other folders)
